--- a/selfhosted-services/grafana/docker-compose.yml
+++ b/selfhosted-services/grafana/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.0"
+version: '3.0'
 
 volumes:
   grafana-data:
@@ -9,7 +9,7 @@ services:
     image: grafana/grafana-oss:latest
     container_name: grafana
     restart: unless-stopped
+    environment:
+      - GF_INSTALL_PLUGINS=grafana-piechart-panel
     volumes:
       - grafana-data:/var/lib/grafana
-    ports:
-      - "3000:3000"
